fixed layout issues with form scheduler

--- a/awx/ui/client/src/scheduler/schedulertime.block.less
+++ b/awx/ui/client/src/scheduler/schedulertime.block.less
@@ -14,7 +14,7 @@ span.ui-spinner.ui-widget.ui-widget-content.ui-corner-all {
 .SchedulerTime-separator {
     margin-left: 3px;
     margin-right: 3px;
-    margin-top: 2px;
+    margin-top: 3px;
 }
 
 .SchedulerTime-utc {
